# property_test_demo

./: property_test_demo.opam
ocaml/: README.md  dune-project
ocaml/lib/: dune
ocaml/test/: property_test_demo.ml
test/: dune
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/test/: validation.test.ts
